# cmake-init-header-only

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README_8md.html  about.html  about_8dox.html  annotated.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_dc6eeea797e4c217035ad4f083fb1faf.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  headeronly_8h.html  headeronly_8hpp.html  index.html  modules.html  namespaces.html  pages.html  searchdata-v1.js  searchdata-v2.js
cmake/: headeronlyConfig.cmake  install-config.cmake  install-rules.cmake  variables.cmake
include/headeronly/: headeronly.h  headeronly.hpp
test/: CMakeLists.txt
test/source/: headeronly_test.cpp
